--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ets-wms13-dgiwg-2021</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <name>DGIWG WMS 1.3 profile Conformance Test Suite (2021)</name>
-  <description>Conformance test suite for the DGIWG WMS 1.3 profile (DGIWG-112) - 2021.</description>
-  <url>https://github.com/opengeospatial/ets-wms13-dgiwg-2021</url>
+  <name>Harmonized DGIWG WMS 1.3 profile Conformance Test Suite (2021)</name>
+  <description>Conformance test suite for the Harmonized DGIWG WMS 1.3 profile (DGIWG-112) - 2021.</description>
+  <url>https://github.com/CESTA-centre/ets-wms13-dgiwg-2021</url>
 
   <parent>
     <groupId>org.opengis.cite</groupId>
@@ -26,15 +26,15 @@
   </organization>
 
   <scm>
-    <url>https://github.com/O-LG/ets-wms13-dgiwg-2021</url>
-    <connection>scm:git:https://github.com/O-LG/ets-wms13-dgiwg-2021.git</connection>
+    <url>https://github.com/CESTA-centre/ets-wms13-dgiwg-2021</url>
+    <connection>scm:git:https://github.com/CESTA-centre/ets-wms13-dgiwg-2021.git</connection>
     <developerConnection>scm:git:git@github.com:O-LG/ets-wms13-dgiwg-2021.git</developerConnection>
     <tag>0.1</tag>
   </scm>
 
   <issueManagement>
     <system>GitHub Issue Tracker</system>
-    <url>https://github.com/O-LG/ets-wms13-dgiwg-2021/issues</url>
+    <url>https://github.com/CESTA-centre/ets-wms13-dgiwg-2021/issues</url>
   </issueManagement>
 
   <developers>
@@ -45,14 +45,14 @@
     </developer>
     <developer>
       <name>P. Mauge</name>
-      <url></url>
+      <url>https://github.com/P-MAUGE</url>
       <timezone>Europe/France</timezone>
     </developer>
   </developers>
 
   <properties>
     <ets-code>wms13-dgiwg-2021</ets-code>
-    <spec-version>2.1.0</spec-version>
+    <spec-version>3.0</spec-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
   </properties>
